@@ -1,8 +1,10 @@
 Version 0.4.3
 -------------
+Bugfix: newzbin.com "Send to SABnzbd" button was broken.
 New feature: Added 1-click NZB download for newzleech.com; thanks to johannespfau for the patch.
 New feature: Added 1-click NZB download to nzbs.org details page.
 Improvement: nzbs.org: Made it clearer that the SAB 1-click icon and the download link are distinct.
+Improvement: Removed badge text (# queued items) instead of displaying '0'.
 
 Version 0.4.2
 -------------
